--- a/cog.yaml
+++ b/cog.yaml
@@ -24,6 +24,8 @@ build:
     - "torch-fidelity==0.3.0"
     - "transformers==4.3.1"
     - "tqdm==4.64.0"
+    - "websocket-client==1.3.3"
+    - "rel==0.4.7"
 
   run:
    - "git clone https://github.com/CompVis/taming-transformers.git && cd taming-transformers && pip install -e . && cd .."
